Update Python One Page

--- a/templates/article-flask-heroku.html
+++ b/templates/article-flask-heroku.html
@@ -2,13 +2,11 @@
 
 {% block head %}
 
-<!-- link rel="stylesheet" href="{{ url_for('static', filename='portfolio.css') }}" -->
+<link rel="stylesheet" href="{{ url_for('static', filename='portfolio.css') }}">
 
 {% endblock %}
 
 {% block body %}
-
-<pre>Deployment Test</pre>
 
 <section class="columnar">
     <p>Heroku is a powerful app service platform that gives you highly responsive, global reach for just a few dollars a month.
