--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,11 @@
 <h3>Interview</h3>
 <ul>
     <li><a href="/problems-solved">Problems Solved</a></li>
+</ul>
+
+<h3>Exam Prep</h3>
+<ul>
+    <li><a href="/one-page-trigonometry">One Page: Trigonometry</a></li>
     <li><a href="/one-page-csharp">One Page: C#</a></li>
     <li><a href="/one-page-javascript">One Page: JavaScript</a></li>
     <li><a href="/one-page-sql">One Page: SQL</a></li>
