Correct spelling errors in Analogue Computers Article; add images; Add builtin functions to Python One Page

--- a/templates/one-page-python.html
+++ b/templates/one-page-python.html
@@ -111,6 +111,9 @@ isinstance( (2+3j), complex )</pre>
 
     <h3>Some Important Methods</h3>
 
+    <p>The Python interpreter has a number of functions and types built into it that are always available: <a href="https://docs.python.org/3/library/functions.html">Built-in Functions</a>. 
+        Some selected examples are as follows...</p>
+
     <pre>print("Hello", "World", sep="_", end="!")
 die = random.randrange(1, 7)
 integer = int(input("Enter and integer: "))
