Minor changes to C# and Python pages

--- a/templates/one-page-csharp.html
+++ b/templates/one-page-csharp.html
@@ -9,7 +9,8 @@
 {% block body %}
 
 <section class="columnar">
-    <p>In the abstract, rest assured that a problem was solved.</p>
+    <p>C# (c-sharp) is the flagship language of Microsoft's .NET framework. C# is useful for making console apps, desktop GUI apps, Web apps, and video games.</p>
+    <p>In my experience C# is not as fast as JavaScript or Python, but it is much easier and more memory safe than its predecessor C++.</p>
 
     <h2>C# (C Sharp) One Page</h2>
     <p>C# operates. This one page presents points to bear in mind when entering a technical exam.</p>
@@ -37,7 +38,7 @@ Class Library
         An interpolated string must begin with a $ (dollar sign).
     </p>
     <p>
-        C# is an extensible programming language becasuse Each class you create becomes a new type you can use to
+        C# is an extensible programming language because each class you create becomes a new type you can use to
         create objects.
     </p>
     <p>Member access operator (.)</p>
