--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
     <li><a href="/one-page-javascript">One Page: JavaScript</a></li>
     <li><a href="/one-page-sql">One Page: SQL</a></li>
     <li><a href="/one-page-python">One Page: Python</a></li>
+    <li><a href="/one-page-data-science">One Page: Data Science</a></li>
 </ul>
 <!-- h3>Resumes</h3>
 <ul>
