Add Word CV and cover letter; add doc snippet to Python page

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <h3>Resume: Skills Based</h3>
 <ul>
-    <li><a href="/resume-sql">SQL Developer</a></li>
+    <li><a href="/static/Shannon_Ware_Resume_15_JUL_2025.docx">Delivery Consultant</a></li>
 </ul>
 
 <h3>Curriculum Vitae</h3>
