--- a/templates/one-page-data-science.html
+++ b/templates/one-page-data-science.html
@@ -77,6 +77,7 @@
     <pre>>>> df.describe()
 >>> df.info()
 >>> df.head()
+>>> df.columns
 >>> select_column = df["Column Name"]  
 >>> type(df)
 >>> type(select_column)      
