Publish NZ Industry data exercise

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <li><a href="/problems-solved">Problems Solved</a></li>
 </ul>
 
-<h3>Exam Prep</h3>
+<h3>One Page Crib Sheets and Exam Prep</h3>
 <ul>
     <li><a href="/one-page-trigonometry">One Page: Trigonometry</a></li>
     <li><a href="/one-page-csharp">One Page: C#</a></li>
@@ -57,8 +57,9 @@
     <li><a href="/articles/flask-heroku">Getting Started with Flask on Heroku</a></li>
 </ul>
 
-<h3>Article</h3>
+<h3>Articles</h3>
 <ul>
+    <li><a href="/articles/nz-industry">New Zealand Industry Data Exploration</a></li>
     <li><a href="/articles/analogue">Toward Analogue Design for the Digital Domain</a></li>
 </ul>
 {% endblock %}
