--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,12 @@
 
 <h3>Resume: Skills Based</h3>
 <ul>
-    <li><a href="/static/Shannon_Ware_Resume_15_JUL_2025.docx">Delivery Consultant</a></li>
+    <li><a href="/static/Shannon_Ware_Resume_15_JUL_2025.docx">Delivery Consultant</a> 15 JUL 2025</li>
 </ul>
 
 <h3>Curriculum Vitae</h3>
 <ul>
-    <li><a href="/curriculum-vitae">Shannon Ware CV</a></li>
+    <li><a href="/curriculum-vitae">Shannon Ware CV</a> 26 MAR 2025</li>
 </ul>
 <!-- h3>Portfolio</h3>
 <ul>
@@ -28,17 +28,18 @@
 </ul -->
 <h3>Interview</h3>
 <ul>
-    <li><a href="/problems-solved">Problems Solved</a></li>
+    <li><a href="/problems-solved">Problems Solved</a> 14 FEB 2025</li>
 </ul>
 
 <h3>One Page Crib Sheets and Exam Prep</h3>
 <ul>
-    <li><a href="/one-page-trigonometry">One Page: Trigonometry</a></li>
-    <li><a href="/one-page-csharp">One Page: C#</a></li>
-    <li><a href="/one-page-javascript">One Page: JavaScript</a></li>
-    <li><a href="/one-page-sql">One Page: SQL</a></li>
-    <li><a href="/one-page-python">One Page: Python</a></li>
-    <li><a href="/one-page-data-science">One Page: Data Science</a></li>
+    <li><a href="/one-page-trigonometry">One Page: Trigonometry</a> 26 JUN 2025</li>
+    <li><a href="/one-page-csharp">One Page: C#</a> 07 JUL 2025</li>
+    <li><a href="/one-page-javascript">One Page: JavaScript</a> 30 MAY 2025</li>
+    <li><a href="/one-page-sql">One Page: SQL</a> 03 JUN 2025</li>
+    <li><a href="/one-page-python">One Page: Python</a> 15 JUL 2025</li>
+    <li><a href="/one-page-data-science">One Page: Data Science</a> 10 JUL 2025</li>
+    <li><a href="/python-exam-prep">Python Certification Exam Preparation</a> 09 SEP 2025</li>
 </ul>
 <!-- h3>Resumes</h3>
 <ul>
@@ -54,12 +55,13 @@
 
 <h3>Technical Writing</h3>
 <ul>
-    <li><a href="/articles/flask-heroku">Getting Started with Flask on Heroku</a></li>
+    <li><a href="/articles/flask-heroku">Getting Started with Flask on Heroku</a> 23 JUN 2025</li>
 </ul>
 
 <h3>Articles</h3>
 <ul>
-    <li><a href="/articles/nz-industry">New Zealand Industry Data Exploration</a></li>
-    <li><a href="/articles/analogue">Toward Analogue Design for the Digital Domain</a></li>
+    <li><a href="/articles/nz-industry">New Zealand Industry Data Exploration</a> 21 JUL 2025</li>
+    <li><a href="/articles/analogue">Toward Analogue Design for the Digital Domain</a> 02 JUL 2025</li>
+    <li><a href="/articles/scoff">Scoff as a Cultural Norm</a> 07 SEP 2025</li>
 </ul>
 {% endblock %}
